# minimal-measurement-time

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXPLANATION_N_SATURATION.md  INSTALL.md  OPTIMIZATIONS.md  PIPELINE_AND_OPTIMIZATIONS_SUMMARY.md  PIPELINE_FIXES.md  QUICK_START_SIMULATION_PLAN.md  README.md  SIMULATION_PLAN_README.md  analyze_N_dependence.py  analyze_simulation_results.py  example_simulation.py  pyproject.toml  pytest.ini  setup.py  simulation_plan.py  validate_results.py
.github/: CI.md  README.md
.github/workflows/: ci.yml  performance.yml  publish.yml
benchmarks/: __init__.py  benchmark_simulator.py
measurement_time_simulator/: __init__.py  constants.py  exporter.py  optimizations.py  particle_statistics.py  simulator.py
minimal_measurement_time/: constants.py  particle_statistics.py  simulator.py
results/: README.md  simulation_results_20251119_195305.txt  simulation_results_20251119_195815.txt  system_comparison_20251119_195902.txt  validation_report.md
results/analysis/: analysis_report_20251120_184656.md  analysis_report_20251120_191911.md  analysis_report_20251121_130216.md  final_results_20251121_103601_summary.txt
tests/: __init__.py  test_exporter.py  test_simulator.py
